[gd_scene load_steps=6 format=3 uid="uid://dogxiw7j046ui"]

[ext_resource type="Script" path="res://UI/pause_gui.gd" id="1_602if"]
[ext_resource type="Texture2D" uid="uid://bitq7dbpr7jos" path="res://UI/grid.png" id="2_gd8p0"]
[ext_resource type="FontFile" uid="uid://b8253e5gv0ngi" path="res://Font/superstar_memesbruh03.ttf" id="3_fgbes"]
[ext_resource type="StyleBox" uid="uid://f0gosvlwm4c6" path="res://Font/buttonstyle2.tres" id="4_hn2gc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3x1su"]
bg_color = Color(0.0823529, 1, 0.643137, 1)

[node name="Pause" type="Control"]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 192.0
script = ExtResource("1_602if")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 192.0
color = Color(0.0156863, 0.0784314, 0.0862745, 1)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
position = Vector2(160, 90)
texture = ExtResource("2_gd8p0")

[node name="menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 100.0
offset_right = 28.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("3_fgbes")
theme_override_styles/normal = SubResource("StyleBoxFlat_3x1su")
theme_override_styles/hover = ExtResource("4_hn2gc")
theme_override_styles/pressed = ExtResource("4_hn2gc")
theme_override_styles/focus = ExtResource("4_hn2gc")
text = "MENU"

[node name="return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 64.0
offset_right = 28.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("3_fgbes")
theme_override_styles/normal = SubResource("StyleBoxFlat_3x1su")
theme_override_styles/hover = ExtResource("4_hn2gc")
theme_override_styles/pressed = ExtResource("4_hn2gc")
theme_override_styles/focus = ExtResource("4_hn2gc")
text = "RETURN"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.5
offset_top = 15.0
offset_right = 98.5
offset_bottom = 39.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0823529, 1, 0.643137, 1)
theme_override_fonts/font = ExtResource("3_fgbes")
theme_override_font_sizes/font_size = 24
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 136.0
offset_right = 28.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("3_fgbes")
theme_override_styles/normal = SubResource("StyleBoxFlat_3x1su")
theme_override_styles/hover = ExtResource("4_hn2gc")
theme_override_styles/pressed = ExtResource("4_hn2gc")
theme_override_styles/focus = ExtResource("4_hn2gc")
text = "QUIT"

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
